Finish removal of all yaml stuff; fix windows functional tests; add documentation handling in web UI

--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,5 +1,12 @@
 
-env:
-  node: true
-  mocha: true
+{
+  "extends": "../.eslintrc",
+  "env": {
+    "node": true,
+    "mocha": true
+  },
+  "rules": {
+    "no-console": 0
+  }
+}
 
