--- a/lib/GUI/.eslintrc
+++ b/lib/GUI/.eslintrc
@@ -1,8 +1,10 @@
-
-env:
-  node: true
-  browser: true
-
-globals:
-  jQuery: true
+{
+  "env": {
+    "node": true,
+    "browser": true
+  },
+  "globals": {
+    "jQuery": true
+  }
+}
 
