--- a/package.json
+++ b/package.json
@@ -6,6 +6,17 @@
     "name": "Alex Kocharin",
     "email": "alex@kocharin.ru"
   },
+  "scripts": {
+    "build": "grunt browserify && grunt less",
+    "start": "node ./bin/sinopia",
+    "start-local": "node ./bin/sinopia -c %APPDATA%/sinopia/config.json",
+    "start-local-debug": "node --debug ./bin/sinopia -c %APPDATA%/sinopia/config.json",
+    "test": "eslint . && mocha ./test/functional ./test/unit",
+    "test-travis": "eslint . && mocha -R spec ./test/functional ./test/unit",
+    "test-only": "mocha ./test/functional ./test/unit",
+    "lint": "eslint ./lib ./test",
+    "clean-shrinkwrap": "node -e '\n  function clean(j) {\n    if (!j) return\n    for (var k in j) {\n      delete j[k].from\n      delete j[k].resolved\n      if (j[k].dependencies) clean(j[k].dependencies)\n    }\n  }\n  x = JSON.parse(require(\"fs\").readFileSync(\"./npm-shrinkwrap.json\"))\n  clean(x.dependencies)\n  x = JSON.stringify(x, null, \"  \")\n  require(\"fs\").writeFileSync(\"./npm-shrinkwrap.json\", x + \"\\n\")\n'\n"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/jamietre/sinopia.git"
@@ -20,8 +31,10 @@
     "body-parser": ">=1.9.2 <2.0.0-0",
     "bunyan": ">=0.22.1 <2.0.0-0",
     "commander": ">=2.3.0 <3.0.0-0",
+    "comment-json": "^1.1.3",
     "compression": ">=1.2.0 <2.0.0-0",
     "cookies": ">=0.5.0 <1.0.0-0",
+    "decompress": "^4.0.0",
     "es6-shim": "0.21.x",
     "express": ">=5.0.0-0 <6.0.0-0",
     "express-json5": ">=0.1.0 <1.0.0-0",
@@ -36,27 +49,28 @@
     "readable-stream": "~1.1.0",
     "render-readme": ">=0.2.1",
     "request": ">=2.31.0 <3.0.0-0",
+    "rimraf": "^2.6.1",
     "rwlock-plus": "1.x",
-    "semver": ">=2.2.1 <5.0.0-0",
-    "sinopia-htpasswd": ">= 0.4.3"
+    "semver": ">=2.2.1 <5.0.0-0"
   },
-  "optionalDependencies": null,
+  "optionalDependencies": {},
   "devDependencies": {
-    "rimraf": ">=2.2.5 <3.0.0-0",
+    "babel-eslint": "^7.1.1",
     "bluebird": "2 >=2.9",
-    "mocha": "2 >=2.2.3",
-    "eslint": "1 >=1.1.0",
     "browserify": "7.x",
     "browserify-handlebars": "1.x",
+    "clipboard": "^1.5.12",
+    "eslint": "^3.16.1",
     "grunt": ">=0.4.4 <1.0.0-0",
-    "grunt-cli": "*",
     "grunt-browserify": ">=2.0.8 <3.0.0-0",
+    "grunt-cli": "*",
     "grunt-contrib-less": ">=0.11.0 <1.0.0-0",
     "grunt-contrib-watch": ">=0.6.1 <1.0.0-0",
-    "unopinionate": ">=0.0.4 <1.0.0-0",
-    "clipboard": "^1.5.12",    
+    "mocha": "^3.2.0",
     "onclick": ">=0.1.0 <1.0.0-0",
-    "transition-complete": ">=0.0.2 <1.0.0-0"
+    "rimraf": ">=2.2.5 <3.0.0-0",
+    "transition-complete": ">=0.0.2 <1.0.0-0",
+    "unopinionate": ">=0.0.4 <1.0.0-0"
   },
   "keywords": [
     "private",
@@ -67,13 +81,6 @@
     "proxy",
     "server"
   ],
-  "scripts": {
-    "test": "eslint . && mocha ./test/functional ./test/unit",
-    "test-travis": "eslint . && mocha -R spec ./test/functional ./test/unit",
-    "test-only": "mocha ./test/functional ./test/unit",
-    "lint": "eslint .",
-    "clean-shrinkwrap": "node -e '\n  function clean(j) {\n    if (!j) return\n    for (var k in j) {\n      delete j[k].from\n      delete j[k].resolved\n      if (j[k].dependencies) clean(j[k].dependencies)\n    }\n  }\n  x = JSON.parse(require(\"fs\").readFileSync(\"./npm-shrinkwrap.json\"))\n  clean(x.dependencies)\n  x = JSON.stringify(x, null, \"  \")\n  require(\"fs\").writeFileSync(\"./npm-shrinkwrap.json\", x + \"\\n\")\n'\n"
-  },
   "engines": {
     "node": ">=0.10"
   },
