--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jamietre/sinopia.git"
+    "url": "http://costartfs:8080/tfs/CoStarCollection/CoStarSuite-Git/_git/sinopia"
   },
   "main": "index.js",
   "bin": {
